<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Light Controller</string>
    <string name="api_name">Light Controller API</string>
    <string name="api_description">Allow Application to Control Lights using the Light Controller API</string>
    <string name="app_settings">Settings</string>
    <string name="app_widget_settings">Widget Settings</string>
    <string name="global">Global</string>
    <string name="Zone1">Zone 1</string>
    <string name="Zone2">Zone 2</string>
    <string name="Zone3">Zone 3</string>
    <string name="Zone4">Zone 4</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="action_settings">Settings</string>
    <string name="action_report_bug">Report Bug</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="warmth_label">Color Temperature</string>
    <string name="brightness_label">Brightness</string>
    <string name="power_label">Power</string>
    <string name="white_label">White</string>
    <string name="night_label">Night</string>
    <string name="full_label">Full</string>

    <string name="cat_head">Control Unit Preferences</string>
    <string name="ip_head">Controller IP/Host</string>
    <string name="disable_discovery_title">Disable Auto Discovery</string>
    <string name="disable_discovery_summary">Dont allow app to automatically look for LED Light control bridges on the network</string>
    <string name="ip_summary">IP or Host address of the light control unit</string>
    <string name="ip_invalid_error">IP: %1$s invalid, reverting to %2$s</string>
    <string name="port_head">Controller Port</string>
    <string name="port_summary">Port for the light control unit (Default 8899) only change if you need to</string>
    <string name="cat_zones_head">Zone Setup</string>
    <string name="cat_rgbw_zones_head">RGBW Zones</string>
    <string name="pref_rgbw_enable">Enable RGBW Zone Control</string>
    <string name="cat_white_zones_head">White Zones</string>
    <string name="pref_white_enable">Enable White Zone Control</string>
    <string name="pref_zone_1">Zone 1 Name</string>
    <string name="pref_zone_2">Zone 2 Name</string>
    <string name="pref_zone_3">Zone 3 Name</string>
    <string name="pref_zone_4">Zone 4 Name</string>
    <string name="ssid_name">ivegotinternet24</string>
    <string name="notifications">Notifications</string>
    <string name="lockscreen_notification_head">Notification When Locked</string>
    <string name="lockscreen_notification_summary">Enable light switch toggle Notification when screen off (Shows on Android 5.0 Lockscreen)</string>
    <string name="cat_contributors">Light Controller Contributors</string>
    <string name="cat_api">Light Controller API</string>
    <string name="pref_api_permissions">API Permissions</string>
    <string name="pref_api_permissions_desc">List and Remove Applications that are allowed to use the Light Controller API</string>
    <string name="cat_wear">Android Wear</string>
    <string name="pref_wear_settings">Wear Settings</string>
    <string name="pref_wear_settings_desc">Change settings for Light Controller Android Wear app</string>
    <string name="wear_summary">Enable a notification to be disabled on your android Wear Device when connected to a specific wifi network, simply select the network(s) below</string>


    <string name="control_widget_config_explaination">What type of bulbs would you like this widget to control?</string>
    <string name="control_widget_rgbw">RGBW Bulbs</string>
    <string name="control_widget_white">White Bulbs</string>

    <string name="widget_config_explaination">Please select the zone you wish to control from the added widget.</string>
    <string name="widget_show_title">Show Zone Title</string>
    <string name="widget_configure_done">Done</string>

    <string name="plugin_name">Light Controller</string>
    <string name="message_hint">Choose what to do with your lights</string>
    <string name="twofortyfouram_locale_breadcrumb_format">%1$s%2$s%3$s</string>
    <string name="twofortyfouram_locale_breadcrumb_separator">\u0020>\u0020</string>
    <string name="twofortyfouram_locale_menu_dontsave">Cancel</string>
    <string name="twofortyfouram_locale_menu_help">Help</string>
    <string name="twofortyfouram_locale_menu_save">Done</string>

    <string name="add_widget">Add widget</string>

    <string name="menu_action_global_on">Global On</string>
    <string name="menu_action_global_off">Global Off</string>
    <string name="menu_action_wifi_setup">Controller Wifi Setup</string>
    <string name="menu_action_zone_setup">Zone Setup</string>

    <string name="zone_setup_add_bulb_step3">if the light(s) flashed several times they have been successfully added to the group, if this didn\'t happen, please start again</string>
    <string name="zone_setup_remove_bulb_step3">if the light(s) flashed several times they have been successfully removed from the group, if this didn\'t happen, please start again</string>

    <string-array name="modes_array">
        <item>Disco Mode</item>
        <item>Music Mode</item>
        <item>Candle Mode</item>
    </string-array>

    <string name="title_activity_alarm_preferences">Alarms</string>
</resources>
