<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/cat_head" >
        <EditTextPreference
            android:title="@string/ip_head"
            android:summary="@string/ip_summary"
            android:key="pref_light_controller_ip"
            android:inputType="textUri"
            android:defaultValue="192.168.0.255"/>
        <EditTextPreference
            android:title="@string/port_head"
            android:summary="@string/port_summary"
            android:key="pref_light_controller_port"
            android:inputType="number"
            android:maxLength="5"
            android:defaultValue="8899"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference android:title="@string/lockscreen_notification_head"
            android:key="lockscreen_notification"
            android:defaultValue="false"
            android:summary="@string/lockscreen_notification_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_zones_head" >
        <EditTextPreference
            android:title="@string/pref_zone_1"
            android:key="pref_zone1"
            android:defaultValue="@string/Zone1"/>
        <EditTextPreference
            android:title="@string/pref_zone_2"
            android:key="pref_zone2"
            android:defaultValue="@string/Zone2"/>
        <EditTextPreference
            android:title="@string/pref_zone_3"
            android:key="pref_zone3"
            android:defaultValue="@string/Zone3"/>
        <EditTextPreference
            android:title="@string/pref_zone_4"
            android:key="pref_zone4"
            android:defaultValue="@string/Zone4"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_contributors" >
        <EditTextPreference
            android:title="Created By"
            android:summary="Eliot Stocker"
            android:key="contrib1"
            android:enabled="false"
            android:alpha="1"/>
        <EditTextPreference
            android:title="Major Contributor"
            android:summary="Louis Orleans"
            android:key="contrib2"
            android:enabled="false"
            android:alpha="1"/>
    </PreferenceCategory>
</PreferenceScreen>